--- a/maxh/PseudoCodeForFigures.ipynb
+++ b/maxh/PseudoCodeForFigures.ipynb
@@ -1,8 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "timeRange = [-0.3, 0.45]"
    ]
@@ -11,8 +13,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Raster Plot of spikes during TuningFreq\n",
-    "\n",
+    "Raster Plot of spikes during TuningFreq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ephysData, bdata = oneCell.load('session')  \n",
     "spikeTimes = ephysData['spikeTimes']\n",
     "eventOnsetTimes = ephysData['events']['stimOn']\n",
@@ -34,9 +43,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tuning Curve\n",
-    "\n",
-    "\n",
+    "Tuning Curve\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "trialTime = timeRange[1] - timeRange[0]\n",
     "\n",
@@ -66,7 +81,15 @@
    "metadata": {},
    "source": [
     "Paired Comparison Plot for change in max firing rate during tuningFreq\n",
-    "(X: saline & doi columns, Y: firing rate)\n",
+    "(X: saline & doi columns, Y: firing rate)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "ephysData, bdata = oneCell.load('saline')\n",
     "spiketimes, etc\n",
@@ -117,7 +140,15 @@
    "source": [
     "Paired Comparison Plot for shift in firing rate peak location during tuningFreq\n",
     "(X: saline & doi columns, Y: frequency\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "spike_average_DOI\n",
     "spike_average_saline\n",
@@ -143,13 +174,21 @@
     "\n",
     "EG:   _ _ _ _ - _ _ \n",
     "\n",
-    "Can use fake data?\n",
+    "Can use fake data?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "TrialsByCondition: [false false false false true false false false]\n",
-    "                    [true, true, true, true, false, true, true ,true]\n",
     "\n",
-    "x = time.\n",
-    "Can use fake data or use real times of stimulus presentation\n"
+    "TrialsByCondition: {[false, false, false ,false ,true, false, false, false],[true, true, true, true, false, true, true ,true]}\n",
+    "\n",
+    "x = time\n",
+    "#Can use fake data or use real times of stimulus presentation\n"
    ]
   },
   {
@@ -162,6 +201,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -169,6 +215,13 @@
     "\n",
     "Normal psth"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -180,15 +233,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot showing the change in index ((odd-stand)/(odd+stand)) between saline and DOI (x: saline-doi columns, y: index between -1 and 1) for multiple sessions. \n",
+    "Plot showing the change in index ((odd-stand)/(odd+stand)) between saline and DOI (x: saline-doi columns, y: index between -1 and 1) for multiple sessions. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Calculate index:\n",
     "\n",
-    "\n",
-    "Calculate index:\n",
-    "\n",
-    "only want spikes during timeRange [0.0, 0.1]\n",
+    "#only want spikes during timeRange [0.0, 0.1]\n",
     "\n",
     "timeRange= [0, 0.1]\n",
     "\n",
@@ -203,13 +269,13 @@
     "    if avg >= max_value_odd:\n",
     "        max_value_odd = avg\n",
     "\n",
-    "Do the same for standard and for DOI\n",
+    "# Do the same for standard and for DOI\n",
     "\n",
     "standard_index = (max_value_odd - max_value_standard)/(max_value_odd + max_value_standard)\n",
     "\n",
     "\n",
     "\n",
-    "def plot_laser_comparison(axes, [spike_average_DOI, spike_average_saline], laserColour, laserFaceColour, yLim, xticklabels):\n"
+    "plot_laser_comparison(axes, [spike_average_DOI, spike_average_saline], laserColour, laserFaceColour, yLim, xticklabels)\n"
    ]
   }
  ],
