--- a/maxh/PseudoCodeForFigures.ipynb
+++ b/maxh/PseudoCodeForFigures.ipynb
@@ -52,17 +52,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# total time of spikes to include around trial\n",
     "trialTime = timeRange[1] - timeRange[0]\n",
     "\n",
     "nTrials = len(indexLimitsEachTrial[0])\n",
     "\n",
+    "#get trial index for each condition\n",
     "trialsEachCondInds, nTrialsEachCond, nCond= trials_each_cond_inds(trialsEachCond, nTrials)\n",
     "\n",
     "nCond = len(trialsEachCondInds)\n",
     "\n",
     "spike_counts = np.zeros(nCond)\n",
     "\n",
+    "# For each condition, loop through each trial and get the spike count according to the indexLimits, divide the spike count by the total trial time, \n",
+    "# then add this average to a new array. Divide each condition's sum of average by the number of trials to get each condition's average firing rate.\n",
     "for cond in range(nCond):\n",
     "    trials = trialsEachCondInds[cond]\n",
     "    n_trials = len(trials)\n",
@@ -91,16 +94,29 @@
    "outputs": [],
    "source": [
     "\n",
+    "# Load data for saline and DOI, lock spiketimes to event.\n",
     "ephysData, bdata = oneCell.load('saline')\n",
     "spiketimes, etc\n",
     "ephysData, bdata = oneCell.load('DOI')\n",
     "spiketimes, etc  \n",
     "\n",
+    "#Calculate average firing rate using a similar function as above.\n",
+    "# Instead of adding the firing rates together, append the array and add each firing rate to it.\n",
     "spike_average_DOI\n",
     "spike_average_saline\n",
     "\n",
+    "# Get the max firing rate for DOI and saline for each condition\n",
+    "max_value_DOI = 0\n",
+    "for avg,ind in spike_average_DOI[ind]:\n",
+    "    if avg >= max_value_odd:\n",
+    "        max_value_DOI = avg\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "axes = plt.subplot()\n",
     "\n",
+    "# Function for plot. Change accordingly\n",
     "def plot_laser_comparison(axes, data, laserColour, laserFaceColour, yLim, xticklabels):\n",
     "    barLoc = np.array([-0.24, 0.24])\n",
     "\n",
@@ -153,7 +169,7 @@
     "spike_average_DOI\n",
     "spike_average_saline\n",
     "\n",
-    "Calculate peak area. (What if there is no peak?)\n",
+    "#Calculate peak area. (What if there is no peak?)\n",
     "\n",
     "\n",
     "plot(X: saline & doi columns, Y: frequency\n"
@@ -211,9 +227,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "PSTH of oddball vs standard when pre (or saline)\n",
-    "\n",
-    "Normal psth"
+    "PSTH of oddball vs standard when pre (or saline)"
    ]
   },
   {
@@ -221,15 +235,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Normal PSTH\n",
+    "extraplots.plot_psth(spikeCountMatHighPre/binWidth, smoothWinSizePsth, timeVec, combinedTrialsHighPre, colorsEachCond, linestyle=None, linewidth=lwPsth, downsamplefactor=downsampleFactorPsth)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "PSTH of oddball vs standard when DOI\n",
-    "\n",
-    "Normal psth"
+    "PSTH of oddball vs standard when DOI"
    ]
   },
   {
@@ -237,7 +252,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Normal PSTH\n",
+    "extraplots.plot_psth(spikeCountMatHighPre/binWidth, smoothWinSizePsth, timeVec, combinedTrialsHighPre, colorsEachCond, linestyle=None, linewidth=lwPsth, downsamplefactor=downsampleFactorPsth)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -254,9 +272,9 @@
    "source": [
     "#Calculate index:\n",
     "\n",
-    "#only want spikes during timeRange [0.0, 0.1]\n",
+    "#only want spikes during timeRange [0.0, 0.1].\n",
     "\n",
-    "timeRange= [0, 0.1]\n",
+    "timeRange = [0, 0.1]\n",
     "\n",
     "(spikeTimesFromEventOnset, trialIndexForEachSpike, indexLimitsEachTrial) = spikesanalysis.eventlocked_spiketimes(spikeTimes, eventOnsetTimes, timeRange)\n",
     "\n",
